# vorp

./: GEMINI.md  README.md  pyproject.toml  requirements.txt  test.py
src/clix/: main.py
src/clix_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/vorp/: main.py
